# server.js
@@ -1,6 +1,6 @@
 const express = require("express");
 const app = express();
-const mongodb = require("./db/connect");
+const mongodb = require("./db/mongoConnect");
 const { requiresAuth } = require("express-openid-connect");
 const port = process.env.PORT || 3000;
 const cors = require("cors");
@@ -19,13 +19,29 @@ const config = {
 // auth router attaches /login, /logout, and /callback routes to the baseURL
 app.use(auth(config));
 
+app.use(cors({
+  origin: ['https://kim-quirk.github.io/cold-case', 'http://localhost:8080']
+}))
+
 // req.isAuthenticated is provided from the auth router
 app.get("/", (req, res) => {
   res.send(req.oidc.isAuthenticated() ? "Logged in" : "Logged out");
 });
 
+app.use((req, res, next) => {
+  res.setHeader('Access-Control-Allow-Origin', '*');
+  next();
+})
+
 app.get("/user", requiresAuth(), (req, res) => {
-  res.send(JSON.stringify(req.oidc.user));
+
+  try {
+    res.send(JSON.stringify(req.oidc.user));
+
+  } catch(err) {
+    res.send(403).json({message: err.message});
+  }
+  
 });
 
 // Use json and also require index file that will reference all other route files.
@@ -33,11 +49,7 @@ app.use(express.json());
 app.use(express.urlencoded({ extended: true}));
 app.use('/', require('./routes/index'));
 
-mongodb.initDb((err) => {
-  if (err) {
-    console.log(err);
-  } else {
-    app.listen(port);
-    console.log(`Connected to DB and listening on ${port}`);
-  }
-});
+mongodb.connectDB();
+
+app.listen(port, () =>
+console.log(`listening on PORT ${port}`));
